# ginsim

./: $null  .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Snakefile  coverage.xml  environment.yaml  hta_dossier.json  noxfile.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  renovate.json5
.github/workflows/: ci.yaml  e2e-tests.yml  pre-commit.yml  remote-e2e.yml  renovate-schedule.yml  renovate.yml
.hypothesis/constants/: 01fdaeca9760f641  04d85fe5e25096d7  05f137bd347efcad  080e537dd8e371eb  0b7b510632b46df9  0e786f0967c06004  0e8efe4b20a5a361  1cfaa0f7c1637031  2166bd8143387fc6  21fc9150d672063f  263a4a7ac868603d  2aaa333149997963  2b312f32d1bfb8ae  3a1518c639edc34a  3ba011db8b025334  3d4ab7a6a503bc84  3ebf394103446c40  4312eafa2091f744  47878a0d77bf2d58  4fa317a428bef79d  5295939d7806788b  531bdcd6151a256e  54e80bb6ee310a95  56c5b35c017eaaf6  5acf65de84fda88e  5c880d98868a2a13  5e96b2f38cc04b3f  5ec2b3b7ba6874fe  64fce9a3828dc3b2  679100f3a6f7503a  69bde470e4f261cb  6beba2d96c6fb2ba  6d4a70465b730fa9  6fa880fa35dce60a  71a26312e99cf681  7325ef606ae5bde5  748ef65ef3402bf9  77e4ed9abd3df8d1  786552d30ec0db86  788863932927a6e1  (+48 more)
code/: README.md
conductor/: index.md  phase_review_template.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
conductor/templates/: README.md
configs/: base.yaml  calibration_australia.yaml  calibration_new_zealand.yaml  policies.yaml  policies_australia.yaml  policies_new_zealand.yaml  scenarios.yaml  stakeholder_personas.yaml  taught_stakeholders_integration.yaml  taught_stakeholders_test.yaml
configs/jurisdictions/: australia.yaml  canada.yaml  new_zealand.yaml  uk.yaml  us.yaml
context/: DECISION_LOGGING_GUIDE.md  assumptions_registry.yaml  data_provenance_template.md  decision_log.md  evidence_grading_rubric.md  references.bib  reflexive_journal_template.md
context/jurisdiction_profiles/: australia_evidence_register.yaml  australia_life_insurance_2026.yaml  australia_life_insurance_placeholder.yaml  new_zealand_evidence_register.yaml  new_zealand_life_insurance_2026.yaml  new_zealand_life_insurance_evidence_template.md  policy_timeline_au_nz.md
context/reflexive_journal/: entry_002.md
docs/: ARTEFACT_AUDIT.md  CITATION_GRAPH.json  CONTEXT_ENGINEERING.md  CROSS_VALIDATION_REPORT.md  CURRENT_STATUS.md  DATA_ACCESS_GOVERNANCE.md  DATA_MANAGEMENT_PLAN.md  DATA_PROVENANCE_LOG.md  E2E_TEST_REPORT.md  EVIDENCE_TO_PRIORS_APPENDIX.md  EVIDENCE_TO_PRIOR_MAPPING.md  EXTERNAL_VALIDATION_ACTION_LOG.md  FORMULAE_INVENTORY.md  FORMULAE_VERIFICATION_REPORT.md  GAME_DESCRIPTIONS.md  GAME_EXECUTION_REPORT.md  GAME_THEORETIC_FRAMING.md  GAME_VALIDATION_CRITERIA.md  GAME_VALIDATION_PRESENTATION.md  GAME_VALIDATION_REPORT.md  GAPS_IMPLEMENTATION_SUMMARY.md  IDENTIFICATION_PLAN.md  INFRASTRUCTURE_SUMMARY.md  JAX_PYDANTIC_COMPATIBILITY.md  JURISDICTION_NOTES.md  MANUSCRIPT_ASSET_INVENTORY.md  META_PIPELINE.md  METHODS_SECTION_DRAFT.md  MINOR_ISSUES_RESOLUTION.md  MODEL_CARD.md  MODEL_VALIDATION_REPORT.md  MODULE_INTERFACES.md  OUTPUT_MANAGEMENT.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_PROGRESS.md  PROFILING_AND_COVERAGE.md  PROFILING_GUIDE.md  PUBLICATION_READINESS.md  (+18 more)
docs/expert_reviews/: actuary_review.md  health_economist_review.md  indigenous_specialist_review.md  policy_expert_review.md
examples/: use_beartype_attrs_msgspec.py
gin-sim/: LICENSE  README.md  __init__.py  _runner.py  app.py  requirements.txt
gin-sim/.streamlit/: config.toml
gin-sim/pages/: 1_Game_Diagrams.py  2_Sensitivity.py  3_Scenarios.py  4_Extended_Games.py  5_Delta_View.py  __init__.py
local_only/conductor/: index.md  product.md  tech-stack.md  tracks.md  workflow.md
local_only/context/: DECISION_LOGGING_GUIDE.md  data_dictionary_template.md  experiment_card_template.md  reflexive_journal_template.md
local_only/docs/: ARTEFACT_AUDIT.md  CONTEXT_ENGINEERING.md  CROSS_VALIDATION_REPORT.md  DATA_ACCESS_GOVERNANCE.md  DATA_MANAGEMENT_PLAN.md  EVIDENCE_TO_PRIORS_APPENDIX.md  GAME_EXECUTION_REPORT.md  GAME_VALIDATION_PRESENTATION.md  GAPS_IMPLEMENTATION_SUMMARY.md  IDENTIFICATION_PLAN.md  IMPROVEMENT_REPORT.md  JOINT_DRAWS.md  (+24 more)
prompts/: prompt_data_harmonisation.txt  prompt_report_writer.txt
protocols/: OSF_Presubmission_Protocol_v1.0.md  Protocol_GeneticDiscriminationPolicy_v1.0.md  Protocol_GeneticDiscriminationPolicy_v2.0.md  cross_validation_protocol.md  expert_reviewer_invitation_template.md  face_validity_review_package.md  model_validation_protocol.md  stress_test_scenarios.md
scripts/: audit_logger.py  audit_trail.py  build_joint_draws.py  check_logic_review.py  conductor_gate.py  convert_posterior_csv_to_npy.py  create_nature_depth_track.py  diamond_repair_yaml.py  download_streamlit_cloud_logs.py  extract_formulae.py  finalize_pack.py  finalize_pack_v2.py  fix_jaxtyping_imports.py  generate_figures.py  generate_game_diagrams.py  generate_tables.py  harvest_citations.py  inject_manuscript_data.py  prepare_submission.py  provenance.py  publish_pack.py  publish_pack_v2.py  quality_gate.py  reporting_common.py  run_evppi_by_group_from_run_dir.py  run_full_uncertainty.py  run_full_uncertainty_from_joint.py  run_meta_pipeline.py  run_module_a.py  run_module_c.py  run_policy_sweep.py  run_posterior_predictive.py  run_stress_tests.py  run_uncertainty_decomposition.py  run_uncertainty_decomposition_total.py  run_voi.py  safe_fix_jaxtyping.py  self_correct.py  structural_sensitivity_test.py  summarize_streamlit_cloud_logs.py  (+13 more)
src/: __init__.py
streamlit_app/: app.py  dashboard_helpers.py  dashboard_ui.py  requirements.txt  scenario_runtime.py
study/: README.md
tests/: __init__.py  conftest.py  test_adversarial.py  test_agentic_auditor.py  test_economic_logic.py  test_mod_a_logic.py  test_mod_d_logic.py  test_mod_e_logic.py  test_voi.py  test_welfare_logic.py  verify_streamlit_diamond.py
(+364 files in other folders)
