[project]
name = "genetic-discrimination-policy-econ"
version = "0.2.0"
description = "JAX-first scaffold for integrated economic evaluation of genetic discrimination policy options"
requires-python = ">=3.11, <3.13"
dependencies = [
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "numpy>=1.26",
  "polars>=0.20.0",
  "numpyro>=0.15.0",
  "optax>=0.2.2",
  "jaxopt>=0.8.3",
  "distrax>=0.1.5",
  "equinox>=0.11.3",
  "chex>=0.1.86",
  "jaxtyping>=0.2.25",
  "beartype>=0.18.0",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "hydra-core>=1.3",
  "nashpy>=0.0.32",
  "quantecon>=0.8.0",
  "networkx>=3.0",
  "typer>=0.9.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "loguru>=0.7.2",
  "matplotlib>=3.8",
  "tabulate>=0.9",
  "python-docx>=1.1",
  "reportlab>=4.0",
  "msgspec>=0.18.0",
]

[project.optional-dependencies]
dev = [
  "uv>=0.1.0",
  "nox>=2024.3.2",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.5",
  "pytest-mock>=3.12",
  "pytest-timeout>=2.2",
  "hypothesis>=6.97",
  "mutmut>=2.4",
  "ruff>=0.3.0",
  "pyright>=1.1.350",
  "pre-commit>=3.6",
  "ipython>=8.20",
  "attrs>=23.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "external",
    "gin-sim",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Select rules
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "T10", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RET", "SIM", "TID", "TCH", "FLY", "RUF"]
# Ignore rules
ignore = [
    "F722", "E501", "COM812", "PLR2004", "ARG", "PLR0913", "PLR0915", "ANN", "D", "PTH", "PERF", "ERA", "RUF001", "RUF003", "S603", "S607", "S602",
    "E402", "N806", "S101", "S314", "E722", "B007", "DTZ", "PLW1510",
    "TCH", # Disable type-checking block requirement (breaks beartype/jaxtyping runtime)
    "RET505", "B904", # allow else after return for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001"]
"scripts/*" = ["T201", "INP001"]
"scripts/quality_gate.py" = ["T201", "INP001", "N817"]
"scripts/run_evppi_by_group_from_run_dir.py" = ["I001"]
"tests/e2e/test_dashboard.py" = ["PT001"]
"tests/e2e/test_remote_app.py" = ["PT023"]
"streamlit_app/*" = ["T201", "INP001"]
"gin-sim/__init__.py" = ["N999"]
"gin-sim/pages/__init__.py" = ["N999"]
"gin-sim/pages/*.py" = ["N999"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["**/tests/**", "**/scripts/**", "**/external/**", ".venv", "outputs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]
